Fix alignment

--- a/css/index.scss
+++ b/css/index.scss
@@ -36,6 +36,7 @@ body {
 
 .home-text-title {
   font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
   padding: 0;
   margin: 0;
 }
